--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -38,7 +38,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-}
+Appointment}
 
 .logo-icon {
   width: 20px;
@@ -52,28 +52,18 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 25px;
+  gap: 20px;
 }
 
-.nav-item {
+.sidebar-nav .item {
   width: 40px;
-  height: 40px;
+  color: white;
+  height: 60px;
   display: flex;
   align-items: center;
   justify-content: center;
   border-radius: 10px;
   cursor: pointer;
-}
-
-.nav-item.active {
-  background-color: #137384;
-}
-
-.nav-icon {
-  width: 20px;
-  height: 20px;
-  background-color: #fff;
-  border-radius: 4px;
 }
 
 /* Main Content Styles */
